tests/NormalTests/paczka1/fuzzy1/32392135.err
Error in line 6: 1wq9dDXp A710 45,3
Error in line 10: HBLmlDXXlpT A710 16,4
Error in line 9: 1wq9dDXp A642 36,2
Error in line 29: S456 S456 5,6
Error in line 24: 8HMgF97kKN S456 3,4
Error in line 16: HBLmlDXXlpT S456 141,2
